--- a/views/login.jade
+++ b/views/login.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  
   p Welcome back to WBPRS, please log in:
   
   form(method='post', action='/login', enctype='application/x-www-form-urlencoded')
@@ -9,10 +10,10 @@ block content
     ul
       li
         label(for='email') Email 
-        input#email(name='email')
+        input#email(name='email', value='#{dummyEmail}')
       li
         label(for='pass') Password 
-        input#pass(name='pass')
+        input#pass(name='pass', value='#{dummyPass}')
     input(type='submit', value='Log in')
   
   p
