--- a/views/login.jade
+++ b/views/login.jade
@@ -10,10 +10,10 @@ block content
     ul
       li
         label(for='email') Email 
-        input#email(name='email', value='#{dummyEmail}')
+        input#email(name='email', value=dummyEmail)
       li
         label(for='pass') Password 
-        input#pass(name='pass', value='#{dummyPass}')
+        input#pass(name='pass', value=dummyPass)
     input(type='submit', value='Log in')
   
   p
