--- a/views/photo/upload.jade
+++ b/views/photo/upload.jade
@@ -8,7 +8,7 @@ block content
         label(for="title") Title 
         input#title(name="title")
       li
-        label(for="body") Tags 
+        label(for="tags") Tags 
         i (seperated by spaces) 
-        input#body(name="body")
+        input#tags(name="tags")
     input(type="submit", value="Upload")
