user profile edit & photo title validation

--- a/views/photo/edit.jade
+++ b/views/photo/edit.jade
@@ -3,6 +3,8 @@ extends ../layout
 block content
 
   form(method='post', action='/photo/edit/#{photo.id}', enctype='application/x-www-form-urlencoded')
+    if invalid
+      .error Please enter a valid title.
     ul
       li
         label(for="title") Title 
