--- a/views/photostream.jade
+++ b/views/photostream.jade
@@ -44,5 +44,6 @@ block content
       i (by lastname) 
       input#query(name='query')
       input(type='submit', value='Search')
+    a(href="/user/edit") Edit profile
   else
     a(href="/") Home
