--- a/views/signup.jade
+++ b/views/signup.jade
@@ -7,7 +7,7 @@ block content
         | That email already exists. Are you trying to 
         a(href="/login") login?
     if invalid
-      .error Please enter a valid email address and password.
+      .error Please enter a valid email address, password, name and surname.
     ul
       li
         label(for='email') Email 
