last minute fixes: edit profile button title, commented out dummy username/pass just in case

--- a/views/user/edit.jade
+++ b/views/user/edit.jade
@@ -26,4 +26,4 @@ block content
       li
         label(for='turkishIdentificationNumber') T.C. Kimlik # 
         input#turkishIdentificationNumber(name='turkishIdentificationNumber', value=user.turkishIdentificationNumber)
-    input(type='submit', value='Sign Up')
+    input(type='submit', value='Update')
